Popravek login pagea

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Home page for e-student</title>
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link rel="stylesheet" href="css/mystyle.css">
 	
 	
@@ -12,8 +13,6 @@
 	<header>
 	<div class="main-centered-content">
 	<a href="./home.html"><img src="logom.jpg" alt="logo"/></a>
-	<div class="header-links"><a href="index.html">Sign out</a></div>
-	</div>
 	</header>
 	
 	<div class="main-centered-content" id="main">
